chore: 生成コードを組み込む
